vlib/v/checker/tests/const_int_overflow_err.vv
const c = 2847238432

fn main() {
    i := c
    assert i == c
}
